[project]
name = "roboticstoolbox-python"
description = "A Python library for robotics education and research"
version = "1.1.2"

authors = [
  { name = "Jesse Haviland", email = "j.haviland@qut.edu.au" },
  { name = "Peter Corke", email = "rvc@petercorke.com" },
]

dependencies = [
  "numpy>=1.17.4",
  "spatialmath-python>=1.1.5",
  "spatialgeometry>=1.0.0",
  "pgraph-python",
  "scipy",
  "matplotlib",
  "ansitable",
  "swift-sim-modern>=1.1.1",
  "progress",
  "typing_extensions",
]

license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

keywords = [
  "python",
  "robotics",
  "robotics-toolbox",
  "kinematics",
  "dynamics",
  "motion-planning",
  "trajectory-generation",
  "jacobian",
  "hessian",
  "control",
  "simulation",
  "robot-manipulator",
  "mobile-robot",
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]

[project.urls]
homepage = "https://github.com/petercorke/robotics-toolbox-python"
documentation = "https://petercorke.github.io/robotics-toolbox-python/"
repository = "https://github.com/petercorke/robotics-toolbox-python"

[project.optional-dependencies]
collision = ["pybullet"]

dev = [
  "black",
  "pytest",
  "pytest-cov",
  "flake8",
  "pyyaml",
  "sympy",
  "qpsolvers",
  "quadprog",
  "pybullet",
  "bdsim",
]

docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx-autorun",
  "sphinx_autodoc_typehints",
  "sphinx-favicon",
]

[project.scripts]
eigdemo = "roboticstoolbox.examples.eigdemo:main"
tripleangledemo = "roboticstoolbox.examples.tripleangledemo:main"
twistdemo = "roboticstoolbox.examples.twistdemo:main"
rtbtool = "roboticstoolbox.bin.rtbtool:main"

[build-system]
requires = ["setuptools", "oldest-supported-numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
  "roboticstoolbox",
  "roboticstoolbox.backends",
  "roboticstoolbox.backends.PyPlot",
  "roboticstoolbox.backends.swift",
  "roboticstoolbox.bin",
  "roboticstoolbox.blocks",
  "roboticstoolbox.examples",
  "roboticstoolbox.robot",
  "roboticstoolbox.mobile",
  "roboticstoolbox.models",
  "roboticstoolbox.models.DH",
  "roboticstoolbox.models.ETS",
  "roboticstoolbox.models.URDF",
  "roboticstoolbox.tools",
  "roboticstoolbox.tools.urdf",
  "roboticstoolbox.tools.xacro",
]

[tool.setuptools.package-data]
"roboticstoolbox.rtbdata" = ["**/*"]

[tool.black]
line-length = 88
target_version = ["py37"]
args = "--experimental-string-processing"
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \.github
    | _build
    | buck-out
    | build
    | dist
    | docs
  )/
)
'''

[tool.flake8]
ignore = ["F821", "W503", "E741"]
max-line-length = 88
extend-ignore = "E203"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*"]
skip = ["pp*", "*musllinux*"]

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]

[tool.cibuildwheel.windows]
archs = ["AMD64", "x86"]

[tool.coverage.run]
omit = ["roboticstoolbox/examples/*", "test_*"]